# restmd

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  readme.md  spec.md
.github/workflows/: ci.yml  e2e.yml  release.yml
.restmd/: example.md
crates/restmd/: Cargo.toml  LICENSE
crates/restmd-cli/: Cargo.toml
crates/restmd-cli/src/: init.rs  main.rs
crates/restmd-core/: Cargo.toml
crates/restmd-core/src/: error.rs  lib.rs  model.rs  parser.rs  span.rs  template.rs
crates/restmd-core/src/exec/: assert.rs  build.rs  capture.rs  error.rs  mod.rs  report.rs  transport.rs
crates/restmd-core/src/resolve/: builtins.rs  context.rs  error.rs  mod.rs
crates/restmd-core/tests/: exec.rs  parse.rs  resolve.rs  snapshots.rs
crates/restmd-core/tests/fixtures/: error_recovery.md  frontmatter_invalid.md  prose_and_bodies.md  templates_and_directives.md  worked_example.md
crates/restmd-core/tests/snapshots/: snapshots__fixtures@error_recovery.md.snap  snapshots__fixtures@frontmatter_invalid.md.snap  snapshots__fixtures@prose_and_bodies.md.snap  snapshots__fixtures@templates_and_directives.md.snap  snapshots__fixtures@worked_example.md.snap
crates/restmd-core/tests/support/: server.rs
crates/restmd-lsp/: Cargo.toml
crates/restmd-lsp/src/: analysis.rs  completion.rs  convert.rs  diagnostics.rs  documents.rs  hover.rs  lib.rs  main.rs  server.rs  symbols.rs  tests.rs
crates/restmd-tui/: Cargo.toml
crates/restmd-tui/src/: app.rs  devserver.rs  discover.rs  event.rs  lib.rs  run.rs  ui.rs  watch.rs
crates/restmd-tui/tests/: tui.rs
crates/restmd/src/: check.rs  files.rs  format.rs  init.rs  main.rs  run.rs  run_render.rs
crates/restmd/templates/: AGENTS.md  GEMINI.md  cursor-restmd.mdc  gemini-settings.json
crates/restmd/tests/: run.rs
crates/restmd/tests/support/: mod.rs  server.rs
demo/: README.md
demo/.restmd/: auth.md  users.md
editors/: README.md
editors/vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/zed/: Cargo.toml  README.md  extension.toml
editors/zed/src/: lib.rs
