[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jxd/restmd"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
time = { version = "0.3", features = ["formatting"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "http2"] }
serde_json = "1"
serde_json_path = "0.7"
regex = "1"
insta = "1"
tiny_http = "0.12"
