[package]
name = "restmd-core"
description = "Parser, types, and (later) executor for restmd — a markdown-native REST client."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
time = { workspace = true }

# Execution (HTTP) — optional so the LSP/TUI can depend on core without them.
reqwest = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_json_path = { workspace = true, optional = true }
regex = { workspace = true, optional = true }

[features]
default = ["exec"]
exec = ["dep:reqwest", "dep:serde_json", "dep:serde_json_path", "dep:regex"]

[dev-dependencies]
insta = { workspace = true, features = ["glob"] }
tiny_http = { workspace = true }
