[package]
name = "restmd"
description = "A markdown-native REST client (CLI)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "restmd"
path = "src/main.rs"

[dependencies]
restmd-tui = { path = "../restmd-tui" }
clap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
restmd-core = { path = "../restmd-core", default-features = false }
tempfile = { workspace = true }
