[package]
name = "restmd"
description = "A markdown-native REST client (CLI)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "restmd"
path = "src/main.rs"

[dependencies]
restmd-tui = { path = "../restmd-tui" }
restmd-lsp = { path = "../restmd-lsp" }
restmd-core = { path = "../restmd-core" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tiny_http = { workspace = true }
